ci: pass DB env to Test step so API smoke tests run against Live DB

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,11 @@ jobs:
         run: npm run lint
 
       - name: Test
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DEMO_MODE: "false"
+          USE_DB: "true"
+          NEXT_TELEMETRY_DISABLED: "1"
         run: npm test
 
       - name: Install jq
